// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccessControlSystemTab should change status filter 1`] = `
<div>
  <div
    class="makeStyles-tableWrapper-937"
  >
    <div
      class="makeStyles-filterActionsContainer-948 makeStyles-filterActionsContainerPadding-950"
    >
      <div
        class="makeStyles-filterActionsContainerLeft-949"
      >
        <div
          class="MuiBox-root MuiBox-root-1003 makeStyles-filterStatusContainer-951 makeStyles-leftFilterStatusContainer-955"
        >
          <div
            class="makeStyles-floatingFilterWrapper-957 makeStyles-filterWrapper-956  floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-958"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-966"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Types
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-960"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-dividerColor-961 MuiDivider-flexItem MuiDivider-vertical"
        />
        <div
          class="MuiBox-root MuiBox-root-1004 makeStyles-filterStatusContainer-951 makeStyles-leftFilterStatusContainer-955"
        >
          <div
            class="makeStyles-floatingFilterWrapper-957 makeStyles-filterWrapper-956  floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-958"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-966"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Available
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-960"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    Loading...
  </div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-1059 makeStyles-close-1070 closed"
    data-testid="acs-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-1060 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-1062"
      >
        <div
          class="makeStyles-drawerButton-1063"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-1061"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-1064 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Device Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-1049"
      >
        <div
          class="makeStyles-summaryDeviceDetail-1076"
        >
          <div
            class="makeStyles-company-1077"
          >
            <div
              class="makeStyles-drawerOverflowWrapper-1087"
            >
              <div
                class="makeStyles-summaryText-1080"
              >
                <p
                  class="MuiTypography-root makeStyles-deviceAccent-1078 makeStyles-entityTitle-1083 MuiTypography-body1"
                >
                  -
                </p>
                <div
                  class="makeStyles-summaryMainText-1081"
                >
                  <span>
                    Open Portal
                  </span>
                  <span>
                    Reverse Installation 
                    No
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1079"
              >
                <div
                  class="makeStyles-summaryRowDirection-1086"
                >
                  <svg>
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-1080 makeStyles-summaryTextSeparation-1082"
                  >
                    <span />
                    <span>
                      New
                    </span>
                    <span>
                      Last Maintenance Date: 
                      -
                    </span>
                    <span>
                      In Service Date: 
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1079"
              >
                <svg>
                  notes.svg
                </svg>
                <div
                  class="makeStyles-summaryText-1080 makeStyles-summaryTextSeparation-1082"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1079"
              >
                <div
                  class="makeStyles-summaryText-1080"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-1078 makeStyles-entityTitle-1083 MuiTypography-body1"
                  >
                    Reader 
                    1
                  </p>
                  <div
                    class="makeStyles-summaryMainText-1081"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      Model 
                      -
                    </span>
                    <span>
                      Hostname 
                      -
                    </span>
                    <span>
                      Public IP 
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1079"
              >
                <svg>
                  info.svg
                </svg>
                <div
                  class="makeStyles-summaryText-1080 makeStyles-summaryTextSeparation-1082"
                >
                  <span>
                    SSH Port Connection: 
                    -
                  </span>
                  <span>
                    TELNET Port Connection: 
                    -
                  </span>
                  <span>
                    HTTP Port Connection: 
                    -
                  </span>
                  <span>
                    TCP Port Connection: 
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1079 makeStyles-drawerdevices-1084"
              >
                <div
                  class="makeStyles-deviceWrapper-1085"
                >
                  <svg>
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-1080 makeStyles-summaryTextSeparation-1082"
                  >
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1079"
              >
                <svg>
                  notes.svg
                </svg>
                <div
                  class="makeStyles-summaryText-1080 makeStyles-summaryTextSeparation-1082"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-1008"
        />
        <div
          class="makeStyles-ctaWrapper-1052"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AccessControlSystemTab should open device drawer 1`] = `
<div>
  <div
    class="makeStyles-tableWrapper-291"
  >
    <div
      class="makeStyles-filterActionsContainer-302 makeStyles-filterActionsContainerPadding-304"
    >
      <div
        class="makeStyles-filterActionsContainerLeft-303"
      >
        <div
          class="MuiBox-root MuiBox-root-357 makeStyles-filterStatusContainer-305 makeStyles-leftFilterStatusContainer-309"
        >
          <div
            class="makeStyles-floatingFilterWrapper-311 makeStyles-filterWrapper-310  floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-312"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-320"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Types
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-314"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-dividerColor-315 MuiDivider-flexItem MuiDivider-vertical"
        />
        <div
          class="MuiBox-root MuiBox-root-358 makeStyles-filterStatusContainer-305 makeStyles-leftFilterStatusContainer-309"
        >
          <div
            class="makeStyles-floatingFilterWrapper-311 makeStyles-filterWrapper-310  floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-312"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-320"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Status
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-314"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <table
      aria-label="device-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Type
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Serial
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Project
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Location
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Status
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-394 makeStyles-clickableRow-392"
          data-testid="device-list-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Turnstile
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            NRFFJE3149 - 4991
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              Orlando International Airport
            </td>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Front gate
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="MuiChip-root makeStyles-statusChip-359 makeStyles-available-364  MuiChip-colorPrimary"
            >
              <span
                class="MuiChip-label"
              >
                Available
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-394 makeStyles-clickableRow-392"
          data-testid="device-list-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Handheld
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            NSDFJE3129 - 3354
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              Orlando International Airport
            </td>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="MuiChip-root makeStyles-statusChip-359 makeStyles-assigned-363  MuiChip-colorPrimary"
            >
              <span
                class="MuiChip-label"
              >
                Assigned
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-395"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-427 makeStyles-close-438 closed"
    data-testid="acs-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-428 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-430"
      >
        <div
          class="makeStyles-drawerButton-431"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-429"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-432 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Device Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-384"
      >
        <div
          class="makeStyles-summaryDeviceDetail-444"
        >
          <div
            class="makeStyles-company-445"
          >
            <div
              class="makeStyles-drawerOverflowWrapper-455"
            >
              <div
                class="makeStyles-summaryText-448"
              >
                <p
                  class="MuiTypography-root makeStyles-deviceAccent-446 makeStyles-entityTitle-451 MuiTypography-body1"
                >
                  NRFFJE3149 - 4991
                </p>
                <div
                  class="makeStyles-summaryMainText-449"
                >
                  <span>
                    Turnstile
                  </span>
                  <span>
                    V3Facial
                  </span>
                  <span>
                    Reverse Installation 
                    No
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-447 makeStyles-drawerdevices-452"
              >
                <div
                  class="makeStyles-deviceWrapper-453"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                    />
                  </svg>
                  <div
                    class="makeStyles-summaryText-448 makeStyles-summaryTextSeparation-450"
                  >
                    <span>
                      Front gate
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-447"
              >
                <div
                  class="makeStyles-summaryRowDirection-454"
                >
                  <svg>
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-448 makeStyles-summaryTextSeparation-450"
                  >
                    <span>
                      Available
                    </span>
                    <span>
                      New
                    </span>
                    <span>
                      Last Refurbished: 
                      08/03/2015
                    </span>
                    <span>
                      Last Maintenance Date: 
                      08/03/2015
                    </span>
                    <span>
                      In Service Date: 
                      08/03/2015
                    </span>
                    <span>
                      Warranty Expiration Date: 
                      08/03/2015
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-447"
              >
                <div
                  class="makeStyles-summaryRowDirection-454"
                >
                  <svg>
                    notes.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-448 makeStyles-summaryTextSeparation-450"
                  >
                    <span>
                      Working Properly
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-447"
              >
                <div
                  class="makeStyles-summaryText-448"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-446 makeStyles-entityTitle-451 MuiTypography-body1"
                  >
                    Reader 
                    1
                  </p>
                  <div
                    class="makeStyles-summaryMainText-449"
                  >
                    <span>
                      MXT-NEKFOEFJ31293
                    </span>
                    <span>
                      Model 
                      Model 4923
                    </span>
                    <span>
                      Hostname 
                      -
                    </span>
                    <span>
                      Public IP 
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-447"
              >
                <svg>
                  info.svg
                </svg>
                <div
                  class="makeStyles-summaryText-448 makeStyles-summaryTextSeparation-450"
                >
                  <span>
                    SSH Port Connection: 
                    -
                  </span>
                  <span>
                    TELNET Port Connection: 
                    -
                  </span>
                  <span>
                    HTTP Port Connection: 
                    -
                  </span>
                  <span>
                    TCP Port Connection: 
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-447 makeStyles-drawerdevices-452"
              >
                <div
                  class="makeStyles-deviceWrapper-453"
                >
                  <svg>
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-448 makeStyles-summaryTextSeparation-450"
                  >
                    <span>
                      Last Repair: 
                      08/03/2015
                    </span>
                    <span>
                      In Service Date: 
                      08/03/2015
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-447"
              >
                <div
                  class="makeStyles-summaryRowDirection-454"
                >
                  <svg>
                    notes.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-448 makeStyles-summaryTextSeparation-450"
                  >
                    <span>
                      Working properly as well.
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-447"
              >
                <div
                  class="makeStyles-summaryText-448"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-446 makeStyles-entityTitle-451 MuiTypography-body1"
                  >
                    Reader 
                    2
                  </p>
                  <div
                    class="makeStyles-summaryMainText-449"
                  >
                    <span>
                      TMX-ZZZFOEFJ312F0
                    </span>
                    <span>
                      Model 
                      Model 7218
                    </span>
                    <span>
                      Hostname 
                      -
                    </span>
                    <span>
                      Public IP 
                      -
                    </span>
                    <span>
                      BiDirectional By Spec
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-447"
              >
                <svg>
                  info.svg
                </svg>
                <div
                  class="makeStyles-summaryText-448 makeStyles-summaryTextSeparation-450"
                >
                  <span>
                    SSH Port Connection: 
                    -
                  </span>
                  <span>
                    TELNET Port Connection: 
                    -
                  </span>
                  <span>
                    HTTP Port Connection: 
                    -
                  </span>
                  <span>
                    TCP Port Connection: 
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-447 makeStyles-drawerdevices-452"
              >
                <div
                  class="makeStyles-deviceWrapper-453"
                >
                  <svg>
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-448 makeStyles-summaryTextSeparation-450"
                  >
                    <span>
                      Last Repair: 
                      08/03/2015
                    </span>
                    <span>
                      In Service Date: 
                      08/03/2015
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-447"
              >
                <div
                  class="makeStyles-summaryRowDirection-454"
                >
                  <svg>
                    notes.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-448 makeStyles-summaryTextSeparation-450"
                  >
                    <span>
                      Working properly as well.
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-399"
        />
        <div
          class="makeStyles-ctaWrapper-387"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AccessControlSystemTab should render 1`] = `
<div>
  <div
    class="makeStyles-tableWrapper-1"
  >
    <div
      class="makeStyles-filterActionsContainer-12 makeStyles-filterActionsContainerPadding-14"
    >
      <div
        class="makeStyles-filterActionsContainerLeft-13"
      >
        <div
          class="MuiBox-root MuiBox-root-67 makeStyles-filterStatusContainer-15 makeStyles-leftFilterStatusContainer-19"
        >
          <div
            class="makeStyles-floatingFilterWrapper-21 makeStyles-filterWrapper-20  floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-22"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-30"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Types
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-24"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-dividerColor-25 MuiDivider-flexItem MuiDivider-vertical"
        />
        <div
          class="MuiBox-root MuiBox-root-68 makeStyles-filterStatusContainer-15 makeStyles-leftFilterStatusContainer-19"
        >
          <div
            class="makeStyles-floatingFilterWrapper-21 makeStyles-filterWrapper-20  floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-22"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-30"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Status
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-24"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    Loading...
  </div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-123 makeStyles-close-134 closed"
    data-testid="acs-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-124 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-126"
      >
        <div
          class="makeStyles-drawerButton-127"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-125"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-128 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Device Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-113"
      >
        <div
          class="makeStyles-summaryDeviceDetail-140"
        >
          <div
            class="makeStyles-company-141"
          >
            <div
              class="makeStyles-drawerOverflowWrapper-151"
            >
              <div
                class="makeStyles-summaryText-144"
              >
                <p
                  class="MuiTypography-root makeStyles-deviceAccent-142 makeStyles-entityTitle-147 MuiTypography-body1"
                >
                  -
                </p>
                <div
                  class="makeStyles-summaryMainText-145"
                >
                  <span>
                    Open Portal
                  </span>
                  <span>
                    Reverse Installation 
                    No
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-143"
              >
                <div
                  class="makeStyles-summaryRowDirection-150"
                >
                  <svg>
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-144 makeStyles-summaryTextSeparation-146"
                  >
                    <span />
                    <span>
                      New
                    </span>
                    <span>
                      Last Maintenance Date: 
                      -
                    </span>
                    <span>
                      In Service Date: 
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-143"
              >
                <svg>
                  notes.svg
                </svg>
                <div
                  class="makeStyles-summaryText-144 makeStyles-summaryTextSeparation-146"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-143"
              >
                <div
                  class="makeStyles-summaryText-144"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-142 makeStyles-entityTitle-147 MuiTypography-body1"
                  >
                    Reader 
                    1
                  </p>
                  <div
                    class="makeStyles-summaryMainText-145"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      Model 
                      -
                    </span>
                    <span>
                      Hostname 
                      -
                    </span>
                    <span>
                      Public IP 
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-143"
              >
                <svg>
                  info.svg
                </svg>
                <div
                  class="makeStyles-summaryText-144 makeStyles-summaryTextSeparation-146"
                >
                  <span>
                    SSH Port Connection: 
                    -
                  </span>
                  <span>
                    TELNET Port Connection: 
                    -
                  </span>
                  <span>
                    HTTP Port Connection: 
                    -
                  </span>
                  <span>
                    TCP Port Connection: 
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-143 makeStyles-drawerdevices-148"
              >
                <div
                  class="makeStyles-deviceWrapper-149"
                >
                  <svg>
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-144 makeStyles-summaryTextSeparation-146"
                  >
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-143"
              >
                <svg>
                  notes.svg
                </svg>
                <div
                  class="makeStyles-summaryText-144 makeStyles-summaryTextSeparation-146"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-72"
        />
        <div
          class="makeStyles-ctaWrapper-116"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AccessControlSystemTab should show loading 1`] = `
<div>
  <div
    class="makeStyles-tableWrapper-152"
  >
    <div
      class="makeStyles-filterActionsContainer-163 makeStyles-filterActionsContainerPadding-165"
    >
      <div
        class="makeStyles-filterActionsContainerLeft-164"
      >
        <div
          class="MuiBox-root MuiBox-root-218 makeStyles-filterStatusContainer-166 makeStyles-leftFilterStatusContainer-170"
        >
          <div
            class="makeStyles-floatingFilterWrapper-172 makeStyles-filterWrapper-171  floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-173"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-181"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Types
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-175"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-dividerColor-176 MuiDivider-flexItem MuiDivider-vertical"
        />
        <div
          class="MuiBox-root MuiBox-root-219 makeStyles-filterStatusContainer-166 makeStyles-leftFilterStatusContainer-170"
        >
          <div
            class="makeStyles-floatingFilterWrapper-172 makeStyles-filterWrapper-171  floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-173"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-181"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Status
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-175"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    Loading...
  </div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-274 makeStyles-close-285 closed"
    data-testid="acs-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-275 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-277"
      >
        <div
          class="makeStyles-drawerButton-278"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-276"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-279 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Device Information
          </p>
        </div>
      </div>
      <div>
        Loading...
      </div>
    </div>
  </div>
</div>
`;
